@startuml Klassendiagramm
skinparam classAttributeIconSize 0

' ==== GUI-Klassen ====
class ApplicationWindow {
  +main(args: String[]): void
}

class BookListPanel {
  +aktualisiereListe(buecher: List<Buch>): void
  +filterAnwenden(): void
}

class BookDetails {
  +zeigeDetails(b: Buch): void
  +openAddDialog(b: Buch): void
}

class StartPanel {
  +initComponents(): void
}

class SimilarBooks {
  +SimilarBooks(ctrl: Controller, buch: Buch): void
  +zeigeÄhnlicheBücher(): void
}

class AboutPanel {
  +AboutPanel(): void
  +zeigeInfos(): void
}

' ==== Verbindungen ====
ApplicationWindow --> BookListPanel
ApplicationWindow --> BookDetails
ApplicationWindow --> StartPanel
ApplicationWindow --> AboutPanel
ApplicationWindow --> Controller : verwendet

StartPanel --> AboutPanel
BookDetails --> SimilarBooks
BookListPanel --> Controller : verwendet
BookDetails --> Controller : verwendet
SimilarBooks --> Controller

' ==== Interfaces & Implementierung ====
interface ApplicationInterface {
  +buchsuche(titel: String): List<Buch>
  +buchdetails(id: int): Buch
  +showRezensionen(buchId: int): List<Rezension>
  +reviewHinzufuegen(id: int, r: Rezension): void
}

Controller ..|> ApplicationInterface

class Controller {
  +buchsuche(titel: String): List<Buch>
  +buchdetails(id: int): Buch
  +showRezensionen(buchId: int): List<Rezension>
  +reviewHinzufuegen(id: int, r: Rezension): void
  +aehnlich(buchId: int): List<Buch>
}

' ==== Backend / Logik ====
class Buchkatalog {
  - buecher: List<Buch>
  +buchsuche(titel: String): List<Buch>
  +buchDetails(id: int): Buch
  +reviewHinzufuegen(id: int, r: Rezension): void
  +showRezensionen(buchId: int): List<Rezension>
  +aehnlich(buchId: int): List<Buch>
}

class StorageService {
  +ladeBuecher(): List<Buch>
  +ladeRezensionen(): List<Rezension>
  +speichereRezension(r: Rezension): void
}

' ==== Datenklassen ====
class Buch {
  -titel: String
  -isbn: String
  -erscheinungsjahr: Date
  -beschreibung: String
  -cover: String
}

class Autor {
  -name: String
}

class Genre {
  -name: String
  -beschreibung: String
}

class Verlag {
  -name: String
}

class Rezension {
  -bewertung: int
  -kommentar: String
  -datum: Date
}

' ==== Beziehungen ====
Controller --> Buchkatalog
Controller --> StorageService
Buchkatalog --> Buch
Buchkatalog --> Rezension
StorageService --> Buch
StorageService --> Rezension

Buch "1" -- "1..*" Autor
Buch "1" -- "1" Genre
Buch "1" -- "1" Verlag
Buch "1" --> "0..*" Rezension

@enduml